--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetList.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetList.cshtml
@@ -108,7 +108,7 @@
     @*<script src="~/assets/js/project-list.js"></script>*@
     <script>
         $(document).ready(function () {
-            $("#hideMenu").click();
+            hideMenu();
             makeDataTable("#tblAssets","2");
 
             $('.select2').select2();
