--- a/MODAMSWeb/Areas/Users/Views/Transfers/EditTransfer.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/EditTransfer.cshtml
@@ -174,7 +174,7 @@
                                     <div class="flex">
                                         <button type="button" class="btn btn-primary " id="btnSubmit"><i class="fa fa-check-circle"></i>&nbsp;Save Transfer</button>
                                         <a asp-area="Users" asp-controller="Transfers" asp-action="PreviewTransfer" asp-route-id="@Model.Transfer.Id" class="btn btn-primary">
-                                            <i class="fa fa-check-circle"></i>&nbsp;Preview Transfer
+                                            <i class="fe fe-eye"></i>&nbsp;Preview Transfer
                                         </a>
                                     </div>
 
