--- a/MODAMSWeb/Views/Shared/_Layout.cshtml
+++ b/MODAMSWeb/Views/Shared/_Layout.cshtml
@@ -308,6 +308,11 @@
             var formattedDate = dateObject.format('DD-MMM-YYYY');
             return formattedDate;
         }
+
+        const hideMenu = () => {
+            $("#hideMenu").click();
+        }
+
     </script>
 </body>
 
