--- a/MODAMSWeb/Areas/Users/Views/Transfers/CreateTransfer.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/CreateTransfer.cshtml
@@ -128,27 +128,30 @@
                                                                     </thead>
                                                                     <tbody>
                                                                         @{
-                                                                            for (var i = 0; i < Model.Assets.Count(); i++)
+                                                                            if (Model.Assets != null)
                                                                             {
-                                                                                <tr>
+                                                                                for (var i = 0; i < Model.Assets.Count(); i++)
+                                                                                {
+                                                                                    <tr>
 
-                                                                                    <td>
-                                                                                        <input asp-for="@Model.Assets[i].AssetId" hidden />
-                                                                                        <div class="col-auto">
-                                                                                            <label class="ckbox" asp-for="@Model.Assets[i].IsSelected">
-                                                                                                <input onclick="return selectAsset(@Model.Assets[i].AssetId,this);"
-                                                                                                       type="checkbox" asp-for="@Model.Assets[i].IsSelected">
-                                                                                                <span></span>
-                                                                                            </label>
-                                                                                        </div>
-                                                                                    </td>
-                                                                                    <td>@Model.Assets[i].Category</td>
-                                                                                    <td>@Model.Assets[i].Make</td>
-                                                                                    <td>@Model.Assets[i].Model</td>
-                                                                                    <td>@Model.Assets[i].AssetName</td>
-                                                                                    <td>@Model.Assets[i].SerialNumber</td>
-                                                                                    <td>@Model.Assets[i].Barcode</td>
-                                                                                </tr>
+                                                                                        <td>
+                                                                                            <input asp-for="@Model.Assets[i].AssetId" hidden />
+                                                                                            <div class="col-auto">
+                                                                                                <label class="ckbox" asp-for="@Model.Assets[i].IsSelected">
+                                                                                                    <input onclick="return selectAsset(@Model.Assets[i].AssetId,this);"
+                                                                                                           type="checkbox" asp-for="@Model.Assets[i].IsSelected">
+                                                                                                    <span></span>
+                                                                                                </label>
+                                                                                            </div>
+                                                                                        </td>
+                                                                                        <td>@Model.Assets[i].Category</td>
+                                                                                        <td>@Model.Assets[i].Make</td>
+                                                                                        <td>@Model.Assets[i].Model</td>
+                                                                                        <td>@Model.Assets[i].AssetName</td>
+                                                                                        <td>@Model.Assets[i].SerialNumber</td>
+                                                                                        <td>@Model.Assets[i].Barcode</td>
+                                                                                    </tr>
+                                                                                }
                                                                             }
                                                                         }
 
@@ -171,7 +174,17 @@
                                         </div>
                                     </div>
                                     <div class="flex">
-                                        <button type="button" class="btn btn-primary " id="btnSubmit"><i class="fa fa-check-circle"></i>&nbsp;Save Transfer</button>
+                                        @{
+                                            if (Model.Assets == null)
+                                            {
+                                                <button type="button" class="btn btn-primary disabled" id="btnSubmit"><i class="fa fa-check-circle"></i>&nbsp;Save Transfer</button>
+                                            }
+                                            else
+                                            {
+                                                <button type="button" class="btn btn-primary" id="btnSubmit"><i class="fa fa-check-circle"></i>&nbsp;Save Transfer</button>
+                                            }
+                                        }
+
                                     </div>
 
                                 </div>
@@ -239,7 +252,7 @@
 
             var obj = $("#" + obj.id);
             var isChecked = obj.prop("checked");
-            console.log(Data);
+
             Data.forEach(function (e) {
                 if (e.assetId == id) {
                     if (isChecked) {
@@ -266,6 +279,7 @@
             $("#dvSelection").html(sHtml);
             $("#spnSelection").html("(" + selection.length + " selected)");
         }
+
         const checkSelection = () => {
             var blnResult = false;
 
