--- a/MODAMSWeb/Views/Shared/layouts/_app-header.cshtml
+++ b/MODAMSWeb/Views/Shared/layouts/_app-header.cshtml
@@ -1,4 +1,25 @@
-                <!-- app-Header -->
+<style>
+    #dvNotifications {
+        width: 500px; /* Change this value to the desired width */
+    }
+
+    .profile-user {
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: cover;
+    }
+
+    .notifyimg {
+        width: 50px; /* Set a desired width for the image container */
+        height: 50px; /* Set a desired height for the image container */
+    }
+
+    .notification-each {
+        align-items: center; /* Align items vertically within the container */
+    }
+</style>
+               <!-- app-Header -->
+
 <div class="app-header header sticky">
     <div class="container-fluid main-container">
         <div class="d-flex">
@@ -178,7 +199,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="notifications-menu ps3 overflow-hidden ps">
+                                    <div class="notifications-menu ps3 overflow-hidden ps" id="dvNotifications">
                                         <a class="dropdown-item" href="/Chat">
                                             <div class="notification-each d-flex">
                                                 <div class="me-3 notifyimg  bg-primary brround">
